Updating the dependencies to version 0.9.6 and including the model modules.

--- a/PluginExampleProject/pom.xml
+++ b/PluginExampleProject/pom.xml
@@ -20,13 +20,31 @@
         <dependency>
             <groupId>com.alpine</groupId>
             <artifactId>plugin-core</artifactId>
-            <version>0.9.3</version>
+            <version>0.9.6</version>
         </dependency>
 
         <dependency>
             <groupId>com.alpine</groupId>
             <artifactId>plugin-spark</artifactId>
-            <version>0.9.3</version>
+            <version>0.9.6</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alpine</groupId>
+            <artifactId>plugin-model</artifactId>
+            <version>0.9.6</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alpine</groupId>
+            <artifactId>alpine-model-api</artifactId>
+            <version>0.9.6</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alpine</groupId>
+            <artifactId>alpine-model-pack</artifactId>
+            <version>0.9.6</version>
         </dependency>
 
         <!-- Spark dependency -->
